@@ -1,3 +1,8 @@
+2002-01-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* paths.py: Used os.path.realpath to follow symbolic links if
+	possible instead of os.path.abspath which doesn't.
+
 2002-01-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-inject (main): Take recipients from the Resent-* headers if
